# CreatingEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/SDL/include/SDL2/: SDL_hints.h  SDL_log.h  SDL_video.h  close_code.h
lib/opengl/include/glad/: glad.h
lib/opengl/src/: glad.c
src/: CMakeLists.txt  main.cpp
src/CSDL/: CMakeLists.txt  CSDL.cpp  CSDL.h  CSDL_IMG.cpp  CSDL_IMG.h  CSDL_MIX.cpp  CSDL_MIX.h  CSDL_Rect.cpp  CSDL_Rect.h  CSDL_Renderer.cpp  CSDL_Renderer.h  CSDL_SDL.cpp  CSDL_SDL.h  CSDL_Surface.cpp  CSDL_Surface.h  CSDL_TTF.cpp  CSDL_TTF.h  CSDL_Texture.cpp  CSDL_Texture.h  CSDL_Window.cpp  CSDL_Window.h  CSDL_error.cpp  CSDL_error.h
src/FileSystem/: CMakeLists.txt  DumpFile.cpp  DumpFile.h  SaveSystem.cpp  SaveSystem.h
src/OpenGL/: CMakeLists.txt  opengl.cpp  opengl.h
src/Parser/: CMakeLists.txt  JSON_Parser.cpp  JSON_Parser.h  XML_Parser.cpp  XML_Parser.h
src/SDL/: CMakeLists.txt  SDL_Animation.cpp  SDL_Animation.h  SDL_Button.cpp  SDL_Button.h  SDL_Const.cpp  SDL_Const.h  SDL_FileLog.cpp  SDL_FileLog.h  SDL_Global.cpp  SDL_Global.h  SDL_Layer.cpp  SDL_Layer.h  SDL_Motion.cpp  SDL_Motion.h  SDL_MultiColumnWidget.cpp  SDL_MultiColumnWidget.h  SDL_OverflowWidget.cpp  SDL_OverflowWidget.h  SDL_ResourceReader.cpp  SDL_ResourceReader.h  SDL_Setting.cpp  SDL_Setting.h  SDL_Sound.cpp  SDL_Sound.h  SDL_Text.cpp  SDL_Text.h  SDL_Texture.cpp  SDL_Texture.h  SDL_Widget.h
src/Scene/: CMakeLists.txt  SC_Const.h  SC_GamePlay.cpp  SC_GamePlay.h
